# auroras-veil

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: camera.rs  cursor.rs  main.rs  movement.rs  player.rs  spacetime.rs
client/src/screens/: character_select.rs  create_character.rs  gameplay.rs  mod.rs  splash.rs  title.rs
client/src/screens/create_character/: create_button.rs  mod.rs
client/src/spacetime/: mod.rs  reducers.rs  subscription.rs
client/src/stdb/: character_def_table.rs  character_def_type.rs  character_instance_table.rs  character_instance_type.rs  character_pawn_table.rs  character_pawn_type.rs  character_table.rs  character_type.rs  class_table.rs  class_type.rs  create_character_input_type.rs  create_character_reducer.rs  delete_character_reducer.rs  enter_world_reducer.rs  entity_movement_table.rs  entity_movement_type.rs  entity_table.rs  entity_type.rs  health_table.rs  health_type.rs  mana_table.rs  mana_type.rs  mod.rs  move_intent_type.rs  movement_tick_reducer.rs  movement_tick_timer_type.rs  race_table.rs  race_type.rs  request_move_reducer.rs  transform_table.rs  transform_type.rs  xp_progression_table.rs  xp_progression_type.rs  xp_table.rs  xp_type.rs
client/src/theme/: colors.rs
client/src/ui/: camera.rs  mod.rs  theme.rs
common/: Cargo.toml
common/src/: calculate_step.rs  chunk.rs  lib.rs  playground.rs
server/: Cargo.toml
server/src/: character.rs  chunk.rs  lib.rs  movement.rs  progression.rs  seed.rs  tick.rs  types.rs
server/src/seed/: class.rs  mod.rs  race.rs  xp_progression.rs
(+7 files in other folders)
