[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"

# Required for `rand` to work in WASM environments
# In WASM, `getrandom` should uses JavaScript's crypto.getRandomValues() as the entropy source
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
